# msrc-sim

./: README.md  pyproject.toml
example_output/: quartet_probabilities.csv  summary.json
examples/: conditional_quartet.yaml  mechanistic_balanced.yaml  mechanistic_quartet.yaml  mechanistic_unbalanced.yaml
msrcsim/: __init__.py  analytic.py  cli.py  config.py  io.py  lineages.py  rearrangement.py  species_tree.py  structured_coalescent.py  validation.py  wright_fisher.py
scripts/: simulate_msrc.py
tests/: test_Hm.py  test_analytic.py  test_analytic_asymmetry.py  test_events.py  test_mechanistic.py  test_simulation.py  test_species_boundaries.py  test_species_tree.py  test_wright_fisher.py
