[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msrc-sim"
version = "0.3.0"
description = "Simulator for the Multi-Species Rearrangement Coalescent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
msrc-sim = "msrcsim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["msrcsim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
